--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel Forest</title>
     
-    <link rel='icon' href='/Travel Forest/images/travel.png' type='image/x-icon'/ >
+    <link rel='icon' href='./ravel.png' type='image/x-icon'/ >
     <link href="https://fonts.googleapis.com/css2?family=Questrial&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="stylesheets/main.css">
+    <link rel="stylesheet" href="./main.css">
     <script src="https://kit.fontawesome.com/a9e48246d3.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -183,11 +183,11 @@
             <h5>Travel Forest</h5>
             <h6>Find us on Social Media</h6>
             <div id="social-icons">
-                <img src="images/social/facebook.png" alt="A facebook icon">
-                <img src="images/social/instagram.png" alt="A instagram icon">
-                <img src="images/social/pinterest.png" alt="A pinterest icon">
-                <img src="images/social/twitter.png" alt="A twitter icon">
-                <img src="images/social/youtube.png" alt="A youtube icon">
+                <img src=".facebook.png" alt="A facebook icon">
+                <img src="./instagram.png" alt="A instagram icon">
+                <img src="./pinterest.png" alt="A pinterest icon">
+                <img src="./twitter.png" alt="A twitter icon">
+                <img src="./youtube.png" alt="A youtube icon">
             </div>
             <hr>
             <h6>Copyright 2020 - All Rights Reserved</h6>
