--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <h5>Travel Forest</h5>
             <h6>Find us on Social Media</h6>
             <div id="social-icons">
-                <img src=".facebook.png" alt="A facebook icon">
+                <img src="./facebook.png" alt="A facebook icon">
                 <img src="./instagram.png" alt="A instagram icon">
                 <img src="./pinterest.png" alt="A pinterest icon">
                 <img src="./twitter.png" alt="A twitter icon">
